# aptkit

./: .gitignore  AUTHORS  NEWS  README  README.PackageKit  README.md  README.tests  TODO  aptd  aptdcon  aptkit.pot  gtk3-demo.py  makepot  meson.build  pylintrc  release.sh  setup.cfg  setup.py
apport/: aptkit.py
aptdaemon/: client.py  config.py  core.py  crash.py  debconf.py  enums.py  errors.py  gtk3widgets.py  lock.py  logger.py  networking.py  pkenums.py  progress.py  test.py  utils.py
aptdaemon/worker/: aptworker.py  pkworker.py
aptkit/: client.py  console.py  core.py  enums.py  errors.py  gtk3widgets.py  lock.py  loop.py  meson.build  pkutils.py  policykit1.py  progress.py  simpleclient.py  test.py
aptkit/worker/: __init__.py  aptworker.py  meson.build  pkworker.py
data/: 20aptkit  aptk.1  aptkcon.1  meson.build  org.aptkit.7  org.aptkit.conf  org.aptkit.policy.in  org.aptkit.service  org.aptkit.transaction.7  org.debian.apt.policy.in  org.debian.apt.service  org.debian.aptkit.7  org.debian.aptkit.conf  org.debian.aptkit.policy.in  org.debian.aptkit.service  org.debian.aptkit.transaction.7  org.freedesktop.PackageKit.service
data/lintian/debian/: aptkit.profile
data/lintian/ubuntu/: aptdaemon.profile
debian/: aptdaemon.install  aptkit-data.install  aptkit.install  changelog  control  copyright  lintian-fatal.tags.Ubuntu  python3-aptdaemon.gtk3widgets.install  python3-aptdaemon.install  python3-aptdaemon.test.install  python3-aptkit.gtk3widgets.install  python3-aptkit.install  python3-aptkit.test.install  rules
debian/patches/: CVE-2020-15703.patch  CVE-2020-16128.patch  CVE-2020-27349.patch  allow-unauthenticated.patch  apport-report.patch  dbus_timeout.patch  do-not-raise-stopiteration.patch  drop-function-not-in-3.11.patch  drop_pkcompat.patch  failing-tests.patch  fix-dependency-solving.patch  fix-high-trust-pkcompat.diff  fix-installation.patch  fix-some-deprecated-code.patch  frontend-locking.patch  gdk-gtk-versions.py  key_value_typo.patch  lintian_deprecated_error.patch  lp1356823.diff  (+19 more)
doc/: aptd.1  aptdcon.1  aptk.1  aptkcon.1  aptkit.gtk3widgets.rst  dbus.rst  index.rst  org.debian.apt.7  org.debian.apt.transaction.7  org.debian.aptkit.7  plugins.rst
po/: LINGUAS  POTFILES.in  af.po  am.po  aptkit.pot  ar.po  ast.po  az.po  be.po  bg.po  bn.po  br.po  bs.po  ca.po  ca@valencia.po  crh.po  cs.po  csb.po  cy.po  da.po  de.po  dv.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fil.po  fo.po  fr.po  fr_CA.po  gd.po  gl.po  he.po  hi.po  (+59 more)
tests/: _test_py2_string_handling.py  _test_py3_string_handling.py  aptkit  dbus.conf  fake-polkitd.py  fakeroot-apt-key  test_cdrom.py  test_client.py  test_configfileprompt.py  test_configparser.py  test_dbus_type.py  test_debconf.py  test_gtk3widgets.py  test_high_trust_repository_whitelist.py  test_index.py  test_lock.py  test_lock_location.py  test_pep8.py  test_pk.py  test_progress.py  test_py2_string_handling.py  test_simulate.py  test_trans_chain.py  test_valid_package_names.py  test_worker.py
(+29 files in other folders)
