python3.install_sources(
    [
        '__init__.py',
        'client.py',
        'config.py',
        'console.py',
        'core.py',
        'debconf.py',
        'enums.py',
        'errors.py',
        'gtk3widgets.py',
        'lock.py',
        'logger.py',
        'loop.py',
        'networking.py',
        'pkenums.py',
        'pkutils.py',
        'policykit1.py',
        'progress.py',
        'utils.py'
    ],
    subdir: 'aptkit'
)

subdir('worker')
